--- a/configuration/experiment_runs2.yml
+++ b/configuration/experiment_runs2.yml
@@ -1,88 +1,357 @@
-- dataset: diabetes
-  model: mlp
+- dataset: heloc
+  model: gandalf
   best_params: {}
   param_grid:
-    outer_params: &id001
-      cv_iterations: 10
-      early_stopping: true
-      cv_size: 5
-      validation_fraction: 0.15
+    outer_params:
       hyperopt_evals: 50
-      n_iter_no_change: 30
-      max_iter: 1000
-    hidden_layer_sizes: &id002
-    - - 64
-      - 32
-      - 16
-    - - 256
-      - 128
-      - 64
-      - 32
-    - - 128
-      - 64
-      - 32
-      - 16
-    activation: &id003
-    - relu
-    - tanh
-    - logistic
-    solver: &id004
-    - adam
-    - lbfgs
-    alpha: &id005
-    - 0.0001
-    - 0.001
-    - 0.01
-    learning_rate_init: &id006
-    - 0.0001
-    - 0.01
-    - 0.1
-    beta_1: &id007
-    - 0.99
-    - 0.8
-    beta_2: &id008
-    - 0.999
-    - 0.9
-    batch_size: &id009
-    - 512
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
     - 1024
     - 2048
-- dataset: housing
-  model: mlp
+    - 4096
+    gflu_stages:
+    - 4
+    - 10
+    gflu_dropout:
+    - 0.0
+    - 0.3
+    embedding_dropout:
+    - 0.0
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: heloc
+  model: tabtransformer
   best_params: {}
   param_grid:
-    outer_params: *id001
-    hidden_layer_sizes: *id002
-    activation: *id003
-    solver: *id004
-    alpha: *id005
-    learning_rate_init: *id006
-    beta_1: *id007
-    beta_2: *id008
-    batch_size: *id009
-- dataset: creditcard
-  model: mlp
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    embedding_bias:
+    - true
+    - false
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 10
+    attn_dropout:
+    - 0.05
+    - 0.3
+    add_norm_dropout:
+    - 0.05
+    - 0.3
+    ff_dropout:
+    - 0.05
+    - 0.3
+    ff_hidden_multiplier:
+    - 2
+    - 6
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    embedding_dropout:
+    - 0.05
+    - 0.3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: diabetes
+  model: s1dcnn
   best_params: {}
   param_grid:
-    outer_params: *id001
-    hidden_layer_sizes: *id002
-    activation: *id003
-    solver: *id004
-    alpha: *id005
-    learning_rate_init: *id006
-    beta_1: *id007
-    beta_2: *id008
-    batch_size: *id009
-- dataset: covertype
-  model: mlp
+    outer_params:
+      hyperopt_evals: 50
+      max_epochs: 1000
+      early_stopping: true
+      shuffle: true
+      validation_fraction: 0.15
+      early_stopping_patience: 6
+      tol: 1.0e-05
+    batch_size:
+    - 1024
+    - 4096
+    hidden_size:
+    - 2048
+    - 4096
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.01
+      AdamW:
+        weight_decay:
+        - 1.0e-05
+        - 0.001
+        learning_rate:
+        - 0.0001
+        - 0.01
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: diabetes
+  model: tabnet
   best_params: {}
   param_grid:
-    outer_params: *id001
-    hidden_layer_sizes: *id002
-    activation: *id003
-    solver: *id004
-    alpha: *id005
-    learning_rate_init: *id006
-    beta_1: *id007
-    beta_2: *id008
-    batch_size: *id009
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    virtual_batch_size_ratio:
+    - 0.125
+    - 0.25
+    - 0.5
+    - 1.0
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    weights:
+    - 0
+    - 1
+    mask_type:
+    - sparsemax
+    - entmax
+    n_d:
+    - 6
+    - 32
+    n_steps:
+    - 1
+    - 6
+    gamma:
+    - 1.0
+    - 2.0
+    n_independent:
+    - 1
+    - 3
+    n_shared:
+    - 1
+    - 3
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: diabetes
+  model: gate
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    tree_depth:
+    - 4
+    - 6
+    num_trees:
+    - 4
+    - 8
+    chain_trees:
+    - false
+    - true
+    gflu_stages:
+    - 3
+    - 8
+    gflu_dropout:
+    - 0.0
+    - 0.05
+    tree_dropout:
+    - 0.0
+    - 0.05
+    tree_wise_attention_dropout:
+    - 0.0
+    - 0.05
+    embedding_dropout:
+    - 0
+    - 0.2
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: heloc
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params:
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+      attn_feature_importance: false
+    batch_size:
+    - 1024
+    - 2048
+    - 4096
+    num_heads:
+    - 4
+    - 10
+    input_embed_dim_multiplier:
+    - 2
+    - 6
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_dropout:
+    - 0.05
+    - 0.2
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 8
+    attn_dropout:
+    - 0.05
+    - 0.2
+    add_norm_dropout:
+    - 0.05
+    - 0.2
+    ff_dropout:
+    - 0.05
+    - 0.2
+    ff_hidden_multiplier:
+    - 4
+    - 32
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    optimizer_fn:
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn:
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
