--- a/configuration/experiment_runs1.yml
+++ b/configuration/experiment_runs1.yml
@@ -1,8 +1,8 @@
-- dataset: adult
-  model: tabnet
+- dataset: covertype
+  model: tabtransformer
   best_params: {}
   param_grid:
-    outer_params: &id041
+    outer_params:
       hyperopt_evals: 50
       auto_lr_find: true
       precision: 16
@@ -10,37 +10,43 @@
       max_epochs: 1000
       val_size: 0.15
       early_stopping_patience: 8
-    virtual_batch_size_ratio: &id042
-    - 0.125
-    - 0.25
-    - 0.5
-    - 1.0
-    batch_size: &id043
+    batch_size:
     - 1024
     - 2048
     - 4096
-    weights: &id044
-    - 0
-    - 1
-    mask_type: &id045
-    - sparsemax
-    - entmax
-    n_d: &id046
+    embedding_bias:
+    - true
+    - false
+    embedding_initialization:
+    - kaiming_uniform
+    - kaiming_normal
+    shared_embedding_fraction:
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks:
+    - 4
+    - 10
+    attn_dropout:
+    - 0.05
+    - 0.3
+    add_norm_dropout:
+    - 0.05
+    - 0.3
+    ff_dropout:
+    - 0.05
+    - 0.3
+    ff_hidden_multiplier:
+    - 2
     - 6
-    - 32
-    n_steps: &id047
-    - 1
-    - 6
-    gamma: &id048
-    - 1.0
-    - 2.0
-    n_independent: &id049
-    - 1
-    - 3
-    n_shared: &id050
-    - 1
-    - 3
-    optimizer_fn: &id051
+    transformer_activation:
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    embedding_dropout:
+    - 0.05
+    - 0.3
+    optimizer_fn:
       Adam:
         weight_decay:
         - 0.0001
@@ -49,7 +55,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id052
+    scheduler_fn:
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -61,43 +67,49 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: breastcancer
+- dataset: creditcard
   model: tabnet
   best_params: {}
   param_grid:
     outer_params: &id001
       hyperopt_evals: 50
       auto_lr_find: true
-      precision: 32
+      precision: 16
       tol: 1.0e-05
       max_epochs: 1000
       val_size: 0.15
-      early_stopping_patience: 10
-    batch_size: &id002
-    - 128
-    - 256
-    weights: &id003
+      early_stopping_patience: 8
+    virtual_batch_size_ratio: &id002
+    - 0.125
+    - 0.25
+    - 0.5
+    - 1.0
+    batch_size: &id003
+    - 1024
+    - 2048
+    - 4096
+    weights: &id004
     - 0
     - 1
-    mask_type: &id004
+    mask_type: &id005
     - sparsemax
     - entmax
-    n_d: &id005
+    n_d: &id006
     - 6
     - 32
-    n_steps: &id006
+    n_steps: &id007
     - 1
     - 6
-    gamma: &id007
+    gamma: &id008
     - 1.0
     - 2.0
-    n_independent: &id008
+    n_independent: &id009
     - 1
     - 3
-    n_shared: &id009
+    n_shared: &id010
     - 1
     - 3
-    optimizer_fn: &id010
+    optimizer_fn: &id011
       Adam:
         weight_decay:
         - 0.0001
@@ -106,7 +118,7 @@
         weight_decay:
         - 0.0001
         - 1.0e-05
-    scheduler_fn: &id011
+    scheduler_fn: &id012
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -118,253 +130,43 @@
         gamma:
         - 0.9
         - 0.99
-- dataset: ageconditions
+- dataset: covertype
   model: tabnet
   best_params: {}
   param_grid:
     outer_params: *id001
-    batch_size: *id002
-    weights: *id003
-    mask_type: *id004
-    n_d: *id005
-    n_steps: *id006
-    gamma: *id007
-    n_independent: *id008
-    n_shared: *id009
-    optimizer_fn: *id010
-    scheduler_fn: *id011
-- dataset: creditcard
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: &id012
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-      attn_feature_importance: false
-    batch_size: &id013
-    - 1024
-    - 2048
-    - 4096
-    num_heads: &id014
-    - 4
-    - 10
-    input_embed_dim_multiplier: &id015
-    - 2
-    - 6
-    embedding_initialization: &id016
-    - kaiming_uniform
-    - kaiming_normal
-    embedding_dropout: &id017
-    - 0.05
-    - 0.2
-    shared_embedding_fraction: &id018
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks: &id019
-    - 4
-    - 8
-    attn_dropout: &id020
-    - 0.05
-    - 0.2
-    add_norm_dropout: &id021
-    - 0.05
-    - 0.2
-    ff_dropout: &id022
-    - 0.05
-    - 0.2
-    ff_hidden_multiplier: &id023
-    - 4
-    - 32
-    transformer_activation: &id024
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    optimizer_fn: &id025
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id026
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: covertype
-  model: fttransformer
-  best_params: {}
-  param_grid:
-    outer_params: *id012
-    batch_size: *id013
-    num_heads: *id014
-    input_embed_dim_multiplier: *id015
-    embedding_initialization: *id016
-    embedding_dropout: *id017
-    shared_embedding_fraction: *id018
-    num_attn_blocks: *id019
-    attn_dropout: *id020
-    add_norm_dropout: *id021
-    ff_dropout: *id022
-    ff_hidden_multiplier: *id023
-    transformer_activation: *id024
-    optimizer_fn: *id025
-    scheduler_fn: *id026
-- dataset: creditcard
-  model: tabtransformer
-  best_params: {}
-  param_grid:
-    outer_params: &id027
-      hyperopt_evals: 50
-      auto_lr_find: true
-      precision: 16
-      tol: 1.0e-05
-      max_epochs: 1000
-      val_size: 0.15
-      early_stopping_patience: 8
-    batch_size: &id028
-    - 1024
-    - 2048
-    - 4096
-    embedding_bias: &id029
-    - true
-    - false
-    embedding_initialization: &id030
-    - kaiming_uniform
-    - kaiming_normal
-    shared_embedding_fraction: &id031
-    - 0.125
-    - 0.25
-    - 0.5
-    num_attn_blocks: &id032
-    - 4
-    - 10
-    attn_dropout: &id033
-    - 0.05
-    - 0.3
-    add_norm_dropout: &id034
-    - 0.05
-    - 0.3
-    ff_dropout: &id035
-    - 0.05
-    - 0.3
-    ff_hidden_multiplier: &id036
-    - 2
-    - 6
-    transformer_activation: &id037
-    - GEGLU
-    - ReGLU
-    - SwiGLU
-    embedding_dropout: &id038
-    - 0.05
-    - 0.3
-    optimizer_fn: &id039
-      Adam:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-      AdamW:
-        weight_decay:
-        - 0.0001
-        - 1.0e-05
-    scheduler_fn: &id040
-      ReduceLROnPlateau:
-        factor:
-        - 0.1
-        - 0.9
-        patience:
-        - 3
-        - 5
-      ExponentialLR:
-        gamma:
-        - 0.9
-        - 0.99
-- dataset: covertype
-  model: tabtransformer
-  best_params: {}
-  param_grid:
-    outer_params: *id027
-    batch_size: *id028
-    embedding_bias: *id029
-    embedding_initialization: *id030
-    shared_embedding_fraction: *id031
-    num_attn_blocks: *id032
-    attn_dropout: *id033
-    add_norm_dropout: *id034
-    ff_dropout: *id035
-    ff_hidden_multiplier: *id036
-    transformer_activation: *id037
-    embedding_dropout: *id038
-    optimizer_fn: *id039
-    scheduler_fn: *id040
-- dataset: creditcard
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params: *id041
-    virtual_batch_size_ratio: *id042
-    batch_size: *id043
-    weights: *id044
-    mask_type: *id045
-    n_d: *id046
-    n_steps: *id047
-    gamma: *id048
-    n_independent: *id049
-    n_shared: *id050
-    optimizer_fn: *id051
-    scheduler_fn: *id052
-- dataset: covertype
-  model: tabnet
-  best_params: {}
-  param_grid:
-    outer_params: *id041
-    virtual_batch_size_ratio: *id042
-    batch_size: *id043
-    weights: *id044
-    mask_type: *id045
-    n_d: *id046
-    n_steps: *id047
-    gamma: *id048
-    n_independent: *id049
-    n_shared: *id050
-    optimizer_fn: *id051
-    scheduler_fn: *id052
+    virtual_batch_size_ratio: *id002
+    batch_size: *id003
+    weights: *id004
+    mask_type: *id005
+    n_d: *id006
+    n_steps: *id007
+    gamma: *id008
+    n_independent: *id009
+    n_shared: *id010
+    optimizer_fn: *id011
+    scheduler_fn: *id012
 - dataset: titanic
   model: resnet
   best_params: {}
   param_grid:
-    outer_params: &id053
+    outer_params: &id013
       hyperopt_evals: 50
       max_epochs: 1000
       early_stopping: true
       early_stopping_patience: 10
       tol: 1.0e-05
       validation_fraction: 0.15
-    batch_size: &id054
+    batch_size: &id014
     - 32
     - 64
     - 128
     - 256
-    resnet_depth: &id055
+    resnet_depth: &id015
     - resnet18
     - resnet34
     - resnet50
-    optimizer_fn: &id056
+    optimizer_fn: &id016
       Adam:
         weight_decay:
         - 1.0e-05
@@ -379,7 +181,7 @@
         learning_rate:
         - 0.0001
         - 0.001
-    scheduler_fn: &id057
+    scheduler_fn: &id017
       ReduceLROnPlateau:
         factor:
         - 0.1
@@ -395,20 +197,20 @@
   model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id053
-    batch_size: *id054
-    resnet_depth: *id055
-    optimizer_fn: *id056
-    scheduler_fn: *id057
+    outer_params: *id013
+    batch_size: *id014
+    resnet_depth: *id015
+    optimizer_fn: *id016
+    scheduler_fn: *id017
 - dataset: breastcancer
   model: resnet
   best_params: {}
   param_grid:
-    outer_params: *id053
-    batch_size: *id054
-    resnet_depth: *id055
-    optimizer_fn: *id056
-    scheduler_fn: *id057
+    outer_params: *id013
+    batch_size: *id014
+    resnet_depth: *id015
+    optimizer_fn: *id016
+    scheduler_fn: *id017
 - dataset: adult
   model: resnet
   best_params: {}
@@ -455,3 +257,94 @@
         gamma:
         - 0.9
         - 0.99
+- dataset: creditcard
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params: &id018
+      hyperopt_evals: 50
+      auto_lr_find: true
+      precision: 16
+      tol: 1.0e-05
+      max_epochs: 1000
+      val_size: 0.15
+      early_stopping_patience: 8
+      attn_feature_importance: false
+    batch_size: &id019
+    - 1024
+    - 2048
+    num_heads: &id020
+    - 4
+    - 8
+    input_embed_dim_multiplier: &id021
+    - 2
+    - 6
+    embedding_initialization: &id022
+    - kaiming_uniform
+    - kaiming_normal
+    embedding_dropout: &id023
+    - 0.05
+    - 0.2
+    shared_embedding_fraction: &id024
+    - 0.125
+    - 0.25
+    - 0.5
+    num_attn_blocks: &id025
+    - 4
+    - 7
+    attn_dropout: &id026
+    - 0.05
+    - 0.2
+    add_norm_dropout: &id027
+    - 0.05
+    - 0.2
+    ff_dropout: &id028
+    - 0.05
+    - 0.2
+    ff_hidden_multiplier: &id029
+    - 4
+    - 32
+    transformer_activation: &id030
+    - GEGLU
+    - ReGLU
+    - SwiGLU
+    optimizer_fn: &id031
+      Adam:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+      AdamW:
+        weight_decay:
+        - 0.0001
+        - 1.0e-05
+    scheduler_fn: &id032
+      ReduceLROnPlateau:
+        factor:
+        - 0.1
+        - 0.9
+        patience:
+        - 3
+        - 5
+      ExponentialLR:
+        gamma:
+        - 0.9
+        - 0.99
+- dataset: covertype
+  model: fttransformer
+  best_params: {}
+  param_grid:
+    outer_params: *id018
+    batch_size: *id019
+    num_heads: *id020
+    input_embed_dim_multiplier: *id021
+    embedding_initialization: *id022
+    embedding_dropout: *id023
+    shared_embedding_fraction: *id024
+    num_attn_blocks: *id025
+    attn_dropout: *id026
+    add_norm_dropout: *id027
+    ff_dropout: *id028
+    ff_hidden_multiplier: *id029
+    transformer_activation: *id030
+    optimizer_fn: *id031
+    scheduler_fn: *id032
